[package]
name = "window_mover"
version = "0.1.0"
edition = "2021"
description = "Tool for moving windows to predefined positions"

[dependencies]
clap = { version = "3.1.3", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
json_pretty = "0.1"
dirs = "4.0"
